--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@ rel="stylesheet">
       <li>
         <a href="aboutme.html">About Me</a>
       </li>
-    </ul>
+      <li>
+       <a href="info.html">Info</a>
+     </li>
+   </ul>
   </nav>
   <center>
   <h1>Look At This Amazballs!</h1>
