--- a/aboutme.html
+++ b/aboutme.html
@@ -13,6 +13,10 @@ rel="stylesheet">
         <li>
           <a href="index.html">Home</a>
         </li>
+         <li> 
+             <a href="info.html">Info</a>
+          </li>
+        </ul>
 <h1>
 <center>
 <p> Well hello I kinda said the stuff I did on the other site as a joke.. But hello!
