--- a/index.html
+++ b/index.html
@@ -40,4 +40,5 @@ rel="stylesheet">
     <img src="my art.jpg"title="cause this is my art bro">
   <p> Cause this is my art bro :/ </p>
 </body>
+   <footer> P.S this is a joke website made for a workshop involving web development </footer>
 </html>
